--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Week 1</title>
+	<p>Let's use Git on this.</p>
 </head>
+
 <body>
-<h1>Week 1</h1>
+	<h1>Week 1</h1>
 </body>
+
 </html>
